# server/internal/api/auth.go
@@ -3,6 +3,7 @@ package api
 import (
 	"fmt"
 	"net/http"
+	"net/url"
 
 	"github.com/gin-gonic/gin"
 
@@ -94,7 +95,7 @@ func UserLogin(c *gin.Context) {
 
 	//set a session cookie
 	c.SetCookie("session_token", sessionToken, 24*60*60,
-		"localhost", "localhost", false, true)
+		"/", "localhost", false, true)
 
 	//set CSRF token in a cookie
 	c.SetCookie("csrf_token", csrfToken, 24*60*60,
@@ -105,4 +106,68 @@ func UserLogin(c *gin.Context) {
 	db.DB.Save(&user)
 
 	c.String(http.StatusOK, "User login with success")
+}
+
+// Authorize verifies whether the user has permission to proceed
+// It checks:
+// 1. If the user exists (via email param).
+// 2. If the session token in the cookie matches the DB.
+// 3. If the CSRF token in the header matches the DB.
+func Authorize(c *gin.Context) error {
+	email := c.Request.FormValue("email")
+	var user models.User
+	res := db.DB.Where("email = ?", email).First(&user)
+	if res.Error != nil {
+		return fmt.Errorf("user not found")
+	}
+
+	//validate session token
+	sessionToken, err := c.Cookie("session_token")
+	if err != nil || sessionToken == "" || sessionToken != user.SessionToken {
+		return fmt.Errorf("invalid session token")
+	}
+
+	//validate the CSRF token
+	csrfToken := c.GetHeader("X-CSRF-Token")
+	decodedCsrf, err := url.QueryUnescape(csrfToken)
+	if err == nil {
+		csrfToken = decodedCsrf
+	}
+
+	if csrfToken == "" || csrfToken != user.CSRFToken {
+		return fmt.Errorf("invalid CSRF token")
+	}
+
+	return nil //auth success
+}
+
+// UserLogout
+// @Summary     User logout
+// @Description Logs out the user, clears cookies and resets tokens in DB
+// @Tags       User, Auth
+// @Produce     plain
+// @Param      email  formData   string true   "User's email"
+// @Param      X-CSRF-Token header	string true   "CSRF Token"
+// @Success     200 {object} string "Logged out successfully!"
+// @Failure    401 {object} string "Unauthorized"
+// @Router     /user/logout [post]
+func UserLogout(c *gin.Context) {
+	if err := Authorize(c); err != nil {
+		c.String(http.StatusUnauthorized, "Unauthorized")
+		return
+	}
+
+	email := c.Request.FormValue("email")
+	var user models.User
+	if err := db.DB.Where("email = ?", email).First(&user).Error; err == nil {
+		user.SessionToken = ""
+		user.CSRFToken = ""
+		db.DB.Save(&user)
+	}
+
+	//clean the tokens
+	c.SetCookie("session_token", "", -1, "/", "localhost", false, true)
+	c.SetCookie("csrf_token", "", -1, "/", "localhost", false, false)
+
+	c.String(http.StatusOK, "Log out with success")
 }
